hal: telink: tl321x: adjust compile options
apply -flto=auto to match tl321x BLE library

Signed-off-by: Damien Ji <yinghao.ji@telink-semi.com>

--- a/tlsr9/CMakeLists.txt
+++ b/tlsr9/CMakeLists.txt
@@ -176,3 +176,9 @@ if (CONFIG_SOC_SERIES_RISCV_TELINK_B9X_RETENTION OR CONFIG_SOC_SERIES_RISCV_TELI
 zephyr_library_sources(common/b9x_context.S)
 
 endif() # CONFIG_SOC_SERIES_RISCV_TELINK_B9X_RETENTION OR CONFIG_SOC_SERIES_RISCV_TELINK_TLX_RETENTION
+
+if (CONFIG_SOC_RISCV_TELINK_TL321X)
+target_compile_options(${ZEPHYR_CURRENT_LIBRARY} PRIVATE
+	-flto=auto
+)
+endif()
