--- a/tlsr9/CMakeLists.txt
+++ b/tlsr9/CMakeLists.txt
@@ -4,18 +4,16 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
+string(REGEX REPLACE "^telink_" "" SOC_FAMILY ${CONFIG_SOC_SERIES})
+
 if (CONFIG_SOC_RISCV_TELINK_B91)
 	set(SOC "B91")
-	set(SOC_FAMILY "b9x")
 elseif (CONFIG_SOC_RISCV_TELINK_B92)
 	set(SOC "B92")
-	set(SOC_FAMILY "b9x")
 elseif (CONFIG_SOC_RISCV_TELINK_B95)
 	set(SOC "B95")
-	set(SOC_FAMILY "b9x")
 elseif (CONFIG_SOC_RISCV_TELINK_TL321X)
 	set(SOC "TL321X")
-	set(SOC_FAMILY "tlx")
 else()
 	message( FATAL_ERROR "Not supported SOC" )
 endif()
@@ -47,8 +45,8 @@ zephyr_include_directories(drivers/${SOC}/flash)
 
 # soc.c reference sources for B9X
 if (NOT CONFIG_SOC_RISCV_TELINK_TL321X)
-zephyr_library_sources(drivers/${SOC}/clock.c)
-zephyr_library_sources(drivers/${SOC}/analog.c)
+	zephyr_library_sources(drivers/${SOC}/clock.c)
+	zephyr_library_sources(drivers/${SOC}/analog.c)
 endif()
 
 # MbedTLS HW acceleration
@@ -64,9 +62,7 @@ if(CONFIG_SOC_FLASH_TELINK_B9X OR CONFIG_USB_TELINK_B9X)
 	)
 endif()
 if(CONFIG_SOC_FLASH_TELINK_TLX OR CONFIG_USB_TELINK_TLX)
-	zephyr_library_sources(
-		drivers/${SOC}/flash.c
-	)
+	zephyr_library_sources( drivers/${SOC}/flash.c )
 endif()
 
 # GPIO driver reference sources
@@ -90,20 +86,15 @@ if(CONFIG_I2C_TELINK_B9X OR CONFIG_I2C_TELINK_TLX)
 endif()
 
 # RF driver reference sources
+if(CONFIG_BT OR CONFIG_IEEE802154)
+	zephyr_library_sources(
+		drivers/${SOC}/aes.c
+		common/tl_rf_power.c
+	)
 if(CONFIG_BT_B9X OR CONFIG_IEEE802154_TELINK_B9X)
-	zephyr_library_sources(
-		drivers/${SOC}/aes.c
-		drivers/${SOC}/stimer.c
-		common/${SOC_FAMILY}_rf_power.c
-	)
-endif()
-if(CONFIG_BT_TLX OR CONFIG_IEEE802154_TELINK_TLX)
-	zephyr_include_directories(common/${SOC_FAMILY})
-	zephyr_library_sources(
-		drivers/${SOC}/aes.c
-		common/${SOC_FAMILY}/${SOC_FAMILY}_rf_power.c
-	)
-endif()
+	zephyr_library_sources(drivers/${SOC}/stimer.c)
+endif() # CONFIG_BT_B9X OR CONFIG_IEEE802154_TELINK_B9X
+endif() # CONFIG_BT OR CONFIG_IEEE802154
 
 # ADC driver reference sources
 if(CONFIG_ADC_TELINK_B9X OR CONFIG_ADC_TELINK_TLX)
@@ -118,41 +109,35 @@ if(CONFIG_USB_TELINK_B9X OR CONFIG_USB_TELINK_TLX)
 endif()
 
 #PM driver dependency
-if (CONFIG_SOC_RISCV_TELINK_TL321X)
-	zephyr_library_sources_ifdef(CONFIG_PM common/${SOC_FAMILY}/${SOC_FAMILY}_sleep.c)
-else()
-	zephyr_library_sources_ifdef(CONFIG_PM drivers/${SOC}/stimer.c)
-	zephyr_library_sources_ifdef(CONFIG_PM common/${SOC_FAMILY}_sleep.c)
-endif() # CONFIG_SOC_RISCV_TELINK_TL321X
-
+if(CONFIG_PM)
+	zephyr_library_sources(common/tl_sleep.c)
+	zephyr_library_sources_ifdef(NOT CONFIG_SOC_RISCV_TELINK_TL321X
+		drivers/${SOC}/stimer.c
+	)
+endif()
 
 #BLE flash reference sources
 if (CONFIG_IEEE802154_TELINK_B9X OR CONFIG_IEEE802154_TELINK_TLX)
-
-zephyr_include_directories(
-	ble
-	ble/vendor/controller/${SOC_FAMILY}
-)
-
+	zephyr_include_directories(
+		ble
+		ble/vendor/controller/${SOC_FAMILY}
+	)
 endif()
 
 # BLE stack reference sources
 if (CONFIG_BT_B9X OR CONFIG_BT_TLX)
-
-zephyr_include_directories(
-	ble
-	ble/vendor/controller/${SOC_FAMILY}
-)
-
-zephyr_library_sources(
-	ble/common/utility.c
-	ble/vendor/controller/${SOC_FAMILY}/${SOC_FAMILY}_bt.c
-	ble/vendor/controller/${SOC_FAMILY}/${SOC_FAMILY}_bt_init.c
-	ble/vendor/controller/${SOC_FAMILY}/${SOC_FAMILY}_bt_buffer.c
-	ble/vendor/controller/${SOC_FAMILY}/${SOC_FAMILY}_bt_flash.c
-)
-
-endif() # (CONFIG_BT_B9X OR CONFIG_BT_TLX)
+	zephyr_include_directories(
+		ble
+		ble/vendor/controller/${SOC_FAMILY}
+	)
+	zephyr_library_sources(
+		ble/common/utility.c
+		ble/vendor/controller/${SOC_FAMILY}/${SOC_FAMILY}_bt.c
+		ble/vendor/controller/${SOC_FAMILY}/${SOC_FAMILY}_bt_init.c
+		ble/vendor/controller/${SOC_FAMILY}/${SOC_FAMILY}_bt_buffer.c
+		ble/vendor/controller/${SOC_FAMILY}/${SOC_FAMILY}_bt_flash.c
+	)
+endif() # CONFIG_BT_B9X OR CONFIG_BT_TLX
 
 if (CONFIG_SOC_RISCV_TELINK_TL321X)
 	add_definitions(-DSTD_GCC)
@@ -161,10 +146,8 @@ endif()
 # Retention feature
 if (CONFIG_SOC_SERIES_RISCV_TELINK_B9X_RETENTION OR CONFIG_SOC_SERIES_RISCV_TELINK_TLX_RETENTION)
 	zephyr_library_sources(common/tl_context.S)
-endif()
+endif() # CONFIG_SOC_SERIES_RISCV_TELINK_B9X_RETENTION OR CONFIG_SOC_SERIES_RISCV_TELINK_TLX_RETENTION
 
 if (CONFIG_SOC_RISCV_TELINK_TL321X)
-target_compile_options(${ZEPHYR_CURRENT_LIBRARY} PRIVATE
-	-flto=auto
-)
+	target_compile_options(${ZEPHYR_CURRENT_LIBRARY} PRIVATE -flto=auto)
 endif()
